# PrismaEngine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  0001-fix-tests-DirectXMath.patch  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_FINAL.md  CODE_REVIEW_STATUS.md  CODE_REVIEW_THE_CHERNO_LINUS.md  Directory.Build.props  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V2.md  MEMO.md  README.md  SCRIPTING_GUIDE.md  build_output.txt  imgui.ini  inputmanager-fixes.patch  opencode.json  setup_project.bat  test_fallback.cpp  update_workflows.py  vcpkg.json
android/: CMakeLists.txt  CMakePresets.json  README.md
projects/: CMakeLists.txt
projects/PrismaCraft/: CMakeLists.txt  README.md
projects/android/: CMakeLists.txt  Engine.cmake
projects/android/PrismaAndroid/: .gitignore  OPTIMIZATION_LOG.md  README.md  WorkFlow.md  settings.gradle.kts
projects/windows/Game/: Application.cpp  pch.cpp  pch.h
sdk/samples/BasicTriangle/: CMakeLists.txt
sdk/samples/BlockGame/: CMakeLists.txt  README.md
sdk/samples/PrismaCraftStarter/: CMakeLists.txt  README.md
src/core/: Application.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  CameraController.cpp  CameraController.h  CommandLineParser.h  Component.h  EditorApplication.h  Engine.cpp  Engine.h  GameObject.h  Helper.h  InputManager.cpp  KeyCode.h  Logger.h  PhysicsSystem.h  PhysicsThread.h  PlatformSDL.cpp  PlatformWindows.cpp  PlatformWindows.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneNode.h  Serializable.h  Singleton.h  SoundSynthesizer.cpp  ThreadManager.cpp  ThreadManager.h  Transform.cpp  Transform.h
src/core/audio/: AudioBackend.h  AudioBackendSDL3.cpp  AudioBackendSDL3.h  AudioBackendXAudio2.cpp  AudioBackendXAudio2.h  AudioSystem.cpp
src/core/graphic/: BasicRenderPipeline.cpp  BasicRenderPipeline.h  CMakeLists.txt  Material.cpp  Material.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  RenderBackend.h  RenderBackendDirectX12.cpp  RenderBackendDirectX12.h  RenderBackendVulkan.cpp  RenderBackendVulkan.h  RenderCommandContext.h  RenderComponent.cpp  RenderComponent.h  RenderGraph.h  RenderPass.h  RenderSystem.cpp  RenderSystem.h  ScriptableRenderPipe.cpp  ScriptableRenderPipe.h  ScriptableRenderPipeline.cpp  ScriptableRenderPipeline.h  Shader.cpp  Shader.h  TriangleExample.cpp
src/core/include/: Application.h  Archive.h  ArchiveBinary.h  ArchiveJson.h  Asset.h  AssetSerializer.h  AudioBackend.h  AudioBackendSDL3.h  AudioBackendXAudio2.h  AudioSystem.h  Camera2D.h  CommandLineParser.h  Common.h  DynamicLoader.h  Engine.h  Export.h  GameObject.h  Helper.h  IApplication.h  ISubSystem.h  ITransform.h  JobSystem.h  LogEntry.h  LogScope.h  Logger.h  ManagerBase.h  MetaData.h  Object.h  Platform.h  PlatformAndroid.h  PlatformSDL.h  PlatformWindows.h  RenderBackendVulkan.h  RenderThread.h  RendererComponent.h  ResourceSerializer.h  Resources.h  Scene.h  SceneManager.h  Serializable.h  (+6 more)
src/core/platform/: Application.cpp  Application.h  ApplicationWindows.h  WindowsUtils.cpp
src/core/resource/: ArchiveBinary.h  ArchiveJson.h  Asset.h  AssetSerializer.cpp  AssetSerializer.h  MeshAsset.cpp  MeshAsset.h  ResourceManager.h
src/core/src/: Application.cpp  ApplicationWindows.cpp  AudioBackendSDL3.cpp  AudioSystem.cpp  Camera2D.cpp  CommandLineParser.cpp  Component.cpp  Engine.cpp  GameObject.cpp  JobSystem.cpp  LogScope.cpp  Logger.cpp  Material.cpp  Mesh.cpp  PhysicsSystem.cpp  Platform.cpp  PlatformSDL.cpp  PlatformWindows.cpp  RenderBackendDirectX12.cpp  RenderBackendVulkan.cpp  RenderComponent.cpp  RenderSystem.cpp  Scene.cpp  Serializable.cpp  TextureAsset.cpp  ThreadManager.cpp  Time.cpp  Transform2D.cpp  TriangleExample.cpp
src/editor/: ApplicationEditor.cpp  ApplicationEditor.h  CMakeLists.txt  CommandLineEditor.cpp  CommandLineEditor.h  CommandLineParser.cpp  CommandLineParser.h  Editor.cpp  Editor.cpp.bak  Editor.cpp.patch  Editor.h  EditorLayer.h  Environment.cpp  Environment.h  Export.h  ProjectSettingsWindow.cpp  ProjectSettingsWindow.h  WindowsUtils.cpp  WindowsUtils.h  main.cpp  test.cpp
src/editor/include/: ApplicationEditor.h
src/editor/src/: ApplicationEditor.cpp  Editor.cpp  WindowsUtils.cpp
src/engine/: AndroidLogger.cpp  AndroidLogger.h  AndroidOut.cpp  AndroidOut.h  Application.cpp  Application.h  Build.h  CMakeLists.txt  CMakeLists.txt_tail.txt  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  Camera3DController.cpp  Camera3DController.h  CameraController.cpp  CameraController.h  CommandLineParser.cpp  CommandLineParser.h  Common.cpp  Component.cpp  Component.h  CubemapTextureAsset.cpp  CubemapTextureAsset.h  DebugOverlay.cpp  DebugOverlay.h  DynamicLoader.h  Engine.cpp  Engine.h  EntryPoint.h  Export.h  FPSCounter.h  GameObject.cpp  GameObject.h  Handle.h  Helper.h  IApplication.cpp  IApplication.h  (+70 more)
src/engine/android/: CMakeLists.txt
src/engine/audio/: AudioAPI.cpp  AudioAPI.h  AudioBackend.h  AudioBackendXAudio2.h  AudioBackendXAudio2.h.bak  AudioDevice.cpp  AudioDevice.h  AudioDeviceNull.cpp  AudioDeviceNull.h  AudioDeviceOpenAL.cpp  AudioDeviceOpenAL.h  AudioDeviceSDL3.cpp  AudioDeviceSDL3.h  AudioDeviceXAudio2.cpp  AudioDeviceXAudio2.cpp.bak  AudioDeviceXAudio2.h  AudioFactory.cpp  AudioFactory.h  AudioManager.cpp  AudioManager.h  AudioSystem.cpp  AudioSystem.cpp.bak  AudioSystem.h  AudioSystem.h.bak  AudioTypes.h  IAudioDevice.h
src/engine/config/: AudioBackendConfig.h  EngineConfig.h  RenderBackendConfig.h
src/engine/core/: Asset.h  AssetBase.h  AssetManager.cpp  AssetManager.h  AsyncLoader.cpp  AsyncLoader.h  AsyncResourceLoaderV2.cpp  AsyncResourceLoaderV3.cpp  Components.h  ECS.cpp  ECS.h  Event.h  HotReloadManager.cpp  HotReloadManager.h  IImageLoader.h  ImageLoaderSTB.cpp  Layer.h  (+14 more)
src/game/: CMakeLists.txt  Game.cpp  Game.h  Game.vcxproj  PrismaCraft.cpp  pch.cpp  pch.h  test.cpp
src/runtime/: AndroidRuntime.cpp  CMakeLists.txt  Runtime.cpp  Runtime.vcxproj  WindowsRuntime.cpp
tests/: CMakeLists.txt  ECSTest.cpp  MathTest.cpp  PureDataStructuresTest.cpp  PureMathTest.cpp  ResourceTest.cpp  TestFramework.h  TestMain.cpp
(+601 files in other folders)
